Add multi-market support and snapshot load debugging
- Initialize event publishing for all configured markets (not just BTC-USD)
- Add detailed logging during snapshot load/save operations
- Add MarketConfig for price ranges and tick sizes per market
- Update ClusterAdminService with rolling archive cleanup
- UI improvements for admin page and order book
- Add ticker stats and trade ring buffer enhancements
- Gateway state management improvements